# cpp-sensor-log-algo-ranges

./: CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
src/: main.cpp  sensor_log.hpp
